# BMSTU_TASD

./: .gitignore  readme.md
lab_01/: CMakeLists.txt  big_float.c  big_float.h  big_int.c  big_int.h  main.c  notes.md  temp.ipynb  unit_tests.c  unit_tests.h  util.c  util.h
lab_01/func_tests/: neg_ideas.txt
lab_02/: CMakeLists.txt  EDA.ipynb  readme.md
lab_02/doc/: EDA.ipynb  Лаба 2 ТИСД.docx
lab_02/inc/: book.h  key.h  menu.h  read.h  table.h  types.h  util.h
lab_02/src/: book.c  key.c  main.c  menu.c  read.c  table.c  util.c
lab_02/tests/: input.txt  output.txt
lab_03/: CMakeLists.txt  readme.md
lab_03/doc/: Лаба 3 ТИСД.docx
lab_03/inc/: any_matrix.h  common.h  cons.h  matrix.h  menu.h  profile.h  sparse.h  util.h  vector.h
lab_03/src/: any_matrix.c  common.c  cons.c  main.c  matrix.c  menu.c  profile.c  readme.md  sparse.c  util.c  vector.c
lab_03/tests/: matrix.txt  smatrix.txt  vector.txt
lab_04/: CMakeLists.txt  readme.md
lab_04/doc/: EDA.ipynb  Лаба 4 ТИСД.docx
lab_04/inc/: list.h  memory.h  menu.h  solution.h  stack.h  util.h  vector_stack.h
lab_04/src/: list.c  main.c  menu.c  solution.c  stack.c  tests.c  util.c  vector_stack.c
lab_05/: CMakeLists.txt  Readme.md
lab_05/doc/: Lab 5 Tasd.docx
lab_05/inc/: menu.h  queue.h  queue_list.h  queue_vec.h  simulate_queue.h  solution.h  task.h  tests.h  util.h
lab_05/src/: main.c  memory.c  menu.c  queue.c  queue_list.c  queue_vec.c  simulate_queue.c  solution.c  task.c  tests.c  util.c
lab_06/: CMakeLists.txt
lab_06/inc/: avl_node.h  avl_tree.h  b_node.h  b_tree.h  cli.h  graphviz.h  hash_set.h  nosql.h  tests.h  util.h
lab_06/res/: avl.dot  (+4 more)
lab_07/: CMakeLists.txt
lab_07/inc/: cli.h  graph.h  matrix.h  semiring.h
lab_07/res/: input.txt  out.dot
lab_07/src/: cli.c  graph.c  main.c  matrix.c  semiring.c
scripts/: build.sh  build_debug.sh  launch.sh  make_tests.sh  remove_empty_tests.sh  run_test.sh  run_tests.sh  style_check.sh  test.py
(+15 files in other folders)
